<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">移动同学录</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_title">首页</string>
    <string name="user_souye">首页</string>
    <string name="user_sousuo">搜索</string>
    <string name="user_search">搜索</string>
    <string name="user_name">姓名：</string>
    <string name="user_age">年龄：</string>
    <string name="user_sex">性别：</string>
    <string name="user_bir">生日：</string>
    <string name="user_dre">梦想：</string>
    <string name="user_more">显示更多</string>
    <string name="user_pack">点击收起</string>
    <string name="user_emer">紧急联系人：</string>
    <string name="user_maj">专业：</string>
    <string name="user_edu">学历：</string>
    <string name="user_hob">爱好：</string>
    <string name="user_wtw">向往的职业：</string>
    <string name="user_add">联系地址：</string>
    <string name="user_qq">QQ：</string>
    <string name="user_pho">联系电话：</string>
    <string name="user_photo">头像</string>
    <string name="user_btn_call">拨打电话</string>
    <string name="user_btn_sms">发送短信</string>
    <string name="keyTips">输入查询关键字</string>
    <string name="action_update">从服务器更新数据</string>

</resources>