<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <!-- 头部容器 -->

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bg"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/main_txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title" />
    </LinearLayout>
    <!-- 底部容器 -->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/bbtm_bg"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/main_btnShowAll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/user_souye"
            android:textColor="#000000" />

        <Button
            android:id="@+id/main_btnShowBy"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_selector"
            android:text="@string/user_sousuo"
            android:textColor="#000000" />
    </LinearLayout>

    <!-- 中部容器 -->

    <RelativeLayout
        android:id="@+id/main_body_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/linearLayout1" >

       
    </RelativeLayout>

</RelativeLayout>